Text overflow fixed to correct, useless properties removed

--- a/src/index.sass
+++ b/src/index.sass
@@ -207,12 +207,9 @@ a
                 font-size: 22px
             .product-desc
                 padding: 20px 0
-                height: 20px
                 overflow: hidden
                 text-overflow: ellipsis
-                display: -webkit-box
-                -webkit-line-clamp: 2
-                -webkit-box-orient: vertical
+                white-space: nowrap
             .product-button
                 background-color: #68C9FF
                 border-radius: 5px
